# usagi

./: .gitignore  .luarc.json  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  README.md  README_DEV.md  THIRD_PARTY_LICENSES.md  about.md.hbs  about.toml  build.rs  flake.nix  justfile  progress.txt  result  setup-emscripten.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  (+1 more)
Formula/: usagi.rb
book/: .gitignore  LICENSE.txt  README.md  book.toml  deno.json  justfile  main.ts
docs/: SHADER.md  web-build.md
examples/: demoscene.lua  effect.lua  hello_usagi.lua  input.lua  jumper.lua  keyboard.lua  px.lua  rng.lua  shapes.lua  synth.lua  text.lua  util.lua
meta/: README.md  usagi.lua
runtime/: usagi.lua  util.lua
scripts/: build_web.ps1  build_web.sh  push_itch.rb  setup_emscripten.sh  smoke_web_shader.ps1  smoke_web_shader.sh  smoke_web_shader_probe.js  update_homebrew.rb
src/: api.rs  assets.rs  audio_engine.rs  bundle.rs  capture.rs  cli.rs  compile.rs  config.rs  diag.rs  effect.rs  error.rs  export.rs  font.rs  font_bake.rs  game_id.rs  icon.rs  init.rs  input.rs  keymap.rs  loveify.rs  macos_app.rs  main.rs  menu_items.rs  modulator.rs  msg.rs  pad_map.rs  palette.rs  pause.rs  pixels.rs  project_name.rs  refresh.rs  render.rs  save.rs  session.rs  settings.rs  shader.rs  synth.rs  templates.rs  tools.rs  update.rs  (+1 more)
web/: mock-itch.html  shell.html  usagi_audio_focus.js  usagi_fullscreen.js  usagi_save.js
website/: README.md  deno.json  install.ps1  install.sh  layout.html  main.ts
(+118 files in other folders)
