[package]
name = "usagi"
version = "0.1.0"
edition = "2024"
authors = ["Brett Chalupa <brett@brettchalupa.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
sola-raylib = { git = "https://github.com/brettchalupa/sola-raylib.git" }

[dev-dependencies]
tempfile = "3"
